# tracebuild

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  example-app-insights.yml  release.yml
examples/app-insights/: Dockerfile  README.md  build-docker-image.sh  config.yaml
examples/jaeger/: README.md  example.sh  setup.sh
examples/otel-collector/: README.md  config.yaml
examples/prometheus/: README.md  example.sh  prometheus.yml  setup.sh
examples/prometheus/grafana/dashboards/: tracebuild.json
examples/prometheus/grafana/provisioning/dashboards/: files.yml
examples/prometheus/grafana/provisioning/datasources/: prometheus.yml
src/: cmd.rs  context.rs  id.rs  main.rs  pipeline.rs  status.rs  timestamp.rs  trace.rs
src/pipeline/: mod.rs  prometheus.rs
