[package]
name = "tracebuild"
version = "0.1.0"
authors = ["Jan Kühle <jkuehle90@gmail.com>"]
edition = "2018"
description = "Command line utility to instrument builds and send traces to OpenTelemetry supported tracing systems"
readme = "README.md"
repository = "https://github.com/frigus02/tracebuild"
license = "MIT"
keywords = ["opentelemetry", "tracing", "builds"]
categories = [
    "command-line-utilities",
    "development-tools::build-utils",
]
exclude = [
    ".github/*",
]

[dependencies]
futures = "0.3.12"
nix = "0.19.1"
opentelemetry = { version = "0.12.0", features = ["trace", "metrics", "tokio-support"] }
opentelemetry-jaeger = { version = "0.11.0", features = ["reqwest_collector_client"] }
opentelemetry-otlp = { version = "0.5.0", features = ["async", "trace"] }
prometheus = "0.11.0"
protobuf = "2.22.0"
rand = "0.8.3"
structopt = "0.3.21"
thiserror = "1.0.23"
tokio = { version = "1.2.0", features = ["rt", "rt-multi-thread", "process"] }
ureq = "2.0.2"
