[package]
name = "tracebuild"
version = "0.2.0"
authors = ["Jan Kühle <jkuehle90@gmail.com>"]
edition = "2018"
description = "Command line utility to instrument builds and send traces to OpenTelemetry supported tracing systems"
readme = "README.md"
repository = "https://github.com/frigus02/tracebuild"
license = "MIT"
keywords = ["opentelemetry", "tracing", "builds"]
categories = [
    "command-line-utilities",
    "development-tools::build-utils",
]
exclude = [
    ".github/*",
]

[dependencies]
nix = "0.20.0"
opentelemetry = { version = "0.12.0", features = ["trace", "metrics", "tokio-support"] }
opentelemetry-jaeger = { version = "0.11.0", features = ["reqwest_collector_client"] }
opentelemetry-otlp = { version = "0.5.0", features = ["async", "trace"] }
opentelemetry-prometheus = "0.5.0"
prometheus = "0.11.0"
rand = "0.8.3"
structopt = "0.3.21"
thiserror = "1.0.24"
tokio = { version = "1.2.0", features = ["rt", "rt-multi-thread", "process"] }
ureq = "2.0.2"
